--- a/code-dump.html
+++ b/code-dump.html
@@ -11,3 +11,11 @@
     margin-right: auto;
     border: 10px solid #000;
   }
+
+  <div class="dropdown" style="float:right;">
+    <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
+    <div class="dropdown-content">
+      <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
+      <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
+    </div>
+  </div>
