--- a/test-index.html
+++ b/test-index.html
@@ -21,15 +21,35 @@
   <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
 </div>
 
-<body style="background-color: #001b2e;"></body>
-
 <div class="border"></div>
 
-<div class="dropdown" style="float:right;">
-  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
-  <div class="dropdown-content">
-    <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
-    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+
+<div class="wrapper">
+  <div class="dropdown dropdown_desktop_icon">
+      <button><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span>
+        <span class="text">Settings</span>
+      </button>
+      <ul>
+        <li><a href="#">
+          <span class="icon">
+            <ion-icon name="person-sharp"></ion-icon>
+          </span>
+          <span class="text">Panic</span>
+        </a></li>
+        <li><a href="#">
+          <span class="icon">
+            <ion-icon name="key-sharp"></ion-icon>
+          </span>
+          <span class="text">Cloak Link</span>
+        </a></li>
+        <li><a href="#">
+          <span class="icon">
+            <ion-icon name="bookmark-sharp"></ion-icon>
+          </span>
+          <span class="text">Help</span>
+        </a></li>
+      </ul>
   </div>
 </div>
 
