--- a/test-index.html
+++ b/test-index.html
@@ -10,6 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <script src="/js/main.js"></script>
+<script src="/js/dropdown.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
@@ -24,7 +25,7 @@
 <div class="border"></div>
 
 <div class="dropdown" style="float:right;">
-  <button class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
+  <button onclick="dropDown();" class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
   <div class="dropdown-content">
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
