--- a/test-index.html
+++ b/test-index.html
@@ -27,7 +27,7 @@
 
 <div class="dropdown" style="float:right;">
   <button onclick="myFunction()" class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
-  <div class="dropdown-content">
+  <div id="myDropdown" class="dropdown-content">
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
