--- a/test-index.html
+++ b/test-index.html
@@ -25,7 +25,7 @@
 
 <div class="border"></div>
 
-<div class="dropdown">
+<div class="dropdown" style="float:right;">
   <button onclick="myFunction()" class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
   <div id="myDropdown" class="dropdown-content">
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
