--- a/games/snow-rider-3d.html
+++ b/games/snow-rider-3d.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
+<head>
 <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/dropdown.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <script src="/js/main.js"></script>
+<script src="/js/dropdown.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
-
+</head>
 <title>Classes</title>
 
-<body style="background-color: #001b2e;"></body>
+<div class="header">
+  <h1 style="font-family: 'Poppins', sans-serif;">Spew45.github.io</h1>
+  <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
+</div>
 
 <div class="border"></div>
 
 <div class="dropdown" style="float:right;">
-  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
-  <div class="dropdown-content">
+  <button onclick="myFunction()" class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
+  <div id="myDropdown" class="dropdown-content">
     <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
 </div>
 
-<p align="center"><iframe src="https://mj89sp3sau2k7lj1eg3k40hkeppguj6j-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=http://www.gstatic.com/sites-gadgets/iframe/iframe.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=394a474f5dcb645c&libs=core&mid=188&parent=https://sites.google.com/site/unblockedgame911/fortnite#up_scroll=no&up_iframeURL=https://snowrider3d.games235.com/#gamedistribution&st=e%3DAIHE3cA%252BGGn4tfiYqRuQhrnvfuqPryo91%252F%252FVLqPyNIlcurqNwttixf6sBde6TKSOPfMiRTCFQXufCIwTQ8rP9OvJqslTzKQqoSwj7HNsf6xgauXfey%252BmdHoHkaSI98ttNC%252FtuPvDA8Z%252F%26c%3Denterprise&rpctoken=8082898034791331026" id="iframe"></iframe></p>
-
-<script src="/js/test.js"></script>
-
 <div class="text">
 <embed src="/dump/text.html">
 </div>
+
+<p align="center"><iframe src="https://mj89sp3sau2k7lj1eg3k40hkeppguj6j-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=http://www.gstatic.com/sites-gadgets/iframe/iframe.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=394a474f5dcb645c&libs=core&mid=188&parent=https://sites.google.com/site/unblockedgame911/fortnite#up_scroll=no&up_iframeURL=https://snowrider3d.games235.com/#gamedistribution&st=e%3DAIHE3cA%252BGGn4tfiYqRuQhrnvfuqPryo91%252F%252FVLqPyNIlcurqNwttixf6sBde6TKSOPfMiRTCFQXufCIwTQ8rP9OvJqslTzKQqoSwj7HNsf6xgauXfey%252BmdHoHkaSI98ttNC%252FtuPvDA8Z%252F%26c%3Denterprise&rpctoken=8082898034791331026" id="iframe"></iframe></p>
+
+<script src="/js/test.js"></script>
