--- a/games/doge-miner.html
+++ b/games/doge-miner.html
@@ -38,6 +38,6 @@
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="/game-assets/DogeMiner/" id="iframe"></iframe></p>
+<p align="center"><iframe src="/games/DogeMiner/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
