--- a/dump/text.html
+++ b/dump/text.html
@@ -65,6 +65,7 @@ ul {
         <li><b><a href="/games/retro-bowl.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Retro Bowl</a><br></li>
         <li><b><a href="/games/rooftop-battles.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Rooftop Battles</a><br></li>
         <li><b><a href="/games/rooftop-snipers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Rooftop Snipers</a><br></li>
+          <li><b><a href="/games/scrap-metal.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Scrap Metal</a><br></li>
         <li><b><a href="/games/shell-shockers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Shell Shockers</a><br></li>
         <li><b><a href="/games/simpsons-road-rage.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Simpsons: Road Rage</a><br></li>
         <li><b><a href="/games/slope-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Slope 2</a><br></li>
