--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <meta name="keywords" content="stick merge, spotify, ultraviolet, gba, nes emulator, nes, moto x3m, moto x3m winter, monkey mart, harry potter gba, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
 <meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, Minecraft Unblocked, Eaglercraft, cookie clicker, fortnite, gba emulator,">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="u-mamOZCtU0gD0BmFdL5s4qVEQc_-1DYn-Ye3BbBws0" />
 <meta charset="UTF-8">
 <script src="/js/main.js"></script>
+<script src="/js/dropdown.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 </style>
@@ -29,13 +31,17 @@
 
 <title>Homepage</title>
 
-<body style="background-color: #001b2e;"></body>
+<div class="header">
+  <h1 style="font-family: 'Poppins', sans-serif;">Spew45.github.io</h1>
+  <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
+</div>
 
 <div class="border"></div>
 
 <div class="dropdown" style="float:right;">
-  <button class="dropbtn"><i class="fa fa-caret-down"></i></button></button>
-  <div class="dropdown-content">
+  <button onclick="myFunction()" class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
+  <div id="myDropdown" class="dropdown-content">
+    <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
     <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
     <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
   </div>
@@ -43,4 +49,13 @@
 
 <div class="text">
 <embed src="/dump/text.html">
+</div>
+
+<div class="images">
+<p align="center"><a href="/games/fortnite.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7" style="margin-top: 50px;">
+<a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
+</p>
 </div>
