--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <title>Homepage</title>
 
 <div class="header">
-  <a href="https://spew45.github.io"><h1 style="color: #fff; text-decoration: none; font-family: 'Poppins', sans-serif;">Spew45.github.io</h1></a>
+  <a href="https://spew45.github.io"><h1 style="color: #fff; font-family: 'Poppins', sans-serif; text-decoration: none;">Spew45.github.io</h1></a>
   <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular 
 unblocked games!</p>
 </div>
