--- a/games/draw-the-hill.html
+++ b/games/draw-the-hill.html
@@ -19,7 +19,7 @@
 <title>Classes</title>
 
 <div class="header">
-  <a href="https://spew45.github.io"><h1 style="color: #fff; font-family: 'Poppins', sans-serif; text-decoration: none;">Spew45.github.io</h1></a>
+  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Spew45</h1></a>
   <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular unblocked games!</p>
 </div>
 
