--- a/dump/text.html
+++ b/dump/text.html
@@ -14,16 +14,17 @@ ul {
     width: 350px;
 }
 #mySearch {
-  width: 30%;
+  width: 33%;
   font-size: 14px;
-  border: 3px solid #ddd;
-  border-radius: 10px;
+  border: 2px solid #232323;
+  border-radius: 15px;
   padding: 10px;
+  background-color: #4d4d4d;
 }
 </style>
 
 <div class="test1">
-<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search games" title="Type in a category">
     <ul id="myMenu">
         <li><b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br></li>
         <li><b><a href="/games/3kh0.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">3kh0 Unblocked</a><br></li>
