--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <embed src="/dump/text.html">
 </div>
 
-<div class="images">
-<p align="center"><a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10" style="margin-top: 50px;">
+<div class="images"><p align="center">
+<a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10" style="margin-top: 50px;">
 <a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
